--- a/share.html
+++ b/share.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex,follow" />
-    <title>winwalk</title>
+    <title>hi sungjun</title>
 
 </head>
 <body>
