--- a/share.html
+++ b/share.html
@@ -8,19 +8,19 @@
     <meta name="robots" content="noindex,follow" />
     <title>winwalk</title>
 
-    <meta property="og:title" content="winwalk" />
-    <meta property="og:url" content="http://winwalk.club/"/>
-    <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
+    <meta property="og:title" content="naver" />
+    <meta property="og:url" content="http://naver.com/"/>
+    <!--<meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />-->
 
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="winwalk"/>
-    <meta name="twitter:url" content="http://winwalk.club/"/>
-    <meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>
+    <meta name="twitter:title" content="naver"/>
+    <meta name="twitter:url" content="http://naver.com/"/>
+    <!--<meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>-->
 
     <script type="text/javascript">
-        window.onload = function () {
+        <!--window.onload = function () {
             alert('hi');
-        }
+        }-->
     </script>
 </head>
 <body>
