--- a/share.html
+++ b/share.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex,follow" />
-    <title>winwalk</title>
+    <title>naver</title>
 
     <meta property="og:title" content="naver" />
     <meta property="og:url" content="http://naver.com/"/>
