--- a/share.html
+++ b/share.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#">
+<!--<html prefix="og: http://ogp.me/ns#">-->
+<html>
 <head>
     <meta http-equiv="Expires" content="-1"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="robots" content="noindex,follow" />
+    <!--<meta name="robots" content="noindex,follow" />-->
     <title>naver</title>
 
     <meta property="og:title" content="naver" />
