--- a/share.html
+++ b/share.html
@@ -19,12 +19,10 @@
     <!--<meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>-->
 
     <script type="text/javascript">
-        <!--window.onload = function () {
-            alert('hi');
-        }-->
+
     </script>
 </head>
 <body>
- HELLO, HONG
+ HELLO, HONG2
 </body>
 </html>
