--- a/share.html
+++ b/share.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<!--<html prefix="og: http://ogp.me/ns#">-->
-<html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
     <meta http-equiv="Expires" content="-1"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!--<meta name="robots" content="noindex,follow" />-->
-    <title>naver</title>
+    <meta name="robots" content="noindex,follow" />
+    <title>winwalk</title>
 
-    <meta property="og:title" content="naver" />
-    <meta property="og:url" content="http://naver.com/"/>
-    <!--<meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />-->
+    <meta property="og:title" content="winwalk" />
+    <meta property="og:url" content="http://winwalk.club/"/>
+    <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
 
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="naver"/>
-    <meta name="twitter:url" content="http://naver.com/"/>
-    <!--<meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>-->
+    <meta name="twitter:title" content="winwalk"/>
+    <meta name="twitter:url" content="http://winwalk.club/"/>
+    <meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>
 
     <script type="text/javascript">
-
+        window.onload = function () {
+            alert('hi');
+        }
     </script>
 </head>
 <body>
- HELLO, HONG222
+ BABY
 </body>
 </html>
