--- a/share.html
+++ b/share.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="noindex,follow" />
     <title>winwalk</title>
 
+    <meta property="og:type" content="article" />
     <meta property="og:title" content="winwalk" />
     <meta property="og:url" content="http://winwalk.club/"/>
     <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
