--- a/share.html
+++ b/share.html
@@ -10,7 +10,7 @@
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="winwalk" />
-    <meta property="og:url" content="http://winwalk.club/"/>
+    <meta property="og:url" content="http://naver.com/"/>
     <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
 
     <meta name="twitter:card" content="summary"/>
