--- a/share.html
+++ b/share.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
 <head>
-    <meta http-equiv="Expires" content="-1"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Cache-Control" content="no-cache"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="robots" content="noindex,follow" />
-    <title>winwalk</title>
+    <!--<meta http-equiv="Expires" content="-1"/>-->
+    <!--<meta http-equiv="Pragma" content="no-cache"/>-->
+    <!--<meta http-equiv="Cache-Control" content="no-cache"/>-->
+    <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
+    <!--<meta name="robots" content="noindex,follow" />-->
+    <title>winwalk22</title>
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="winwalk" />
@@ -19,9 +19,7 @@
     <meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>
 
     <script type="text/javascript">
-        window.onload = function () {
-            alert('hi');
-        }
+        
     </script>
 </head>
 <body>
