--- a/share.html
+++ b/share.html
@@ -6,21 +6,9 @@
     <!--<meta http-equiv="Cache-Control" content="no-cache"/>-->
     <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
     <!--<meta name="robots" content="noindex,follow" />-->
-    <title>winwalk22</title>
+    <title>hong</title>
 
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="winwalk" />
-    <!--<meta property="og:url" content="http://naver.com/"/>-->
-    <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
-
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="winwalk"/>
-    <meta name="twitter:url" content="http://winwalk.club/"/>
-    <meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>
-
-    <script type="text/javascript">
-
-    </script>
+    
 </head>
 <body>
  BABY
