--- a/share.html
+++ b/share.html
@@ -8,9 +8,9 @@
     <!--<meta name="robots" content="noindex,follow" />-->
     <title>hong</title>
 
-    
+
 </head>
 <body>
- BABY
+ BABYasfe
 </body>
 </html>
