--- a/share.html
+++ b/share.html
@@ -8,9 +8,11 @@
     <!--<meta name="robots" content="noindex,follow" />-->
     <title>hong</title>
 
+    <script type="text/javascript">
 
+    </script>
 </head>
 <body>
- BABYasfe
+ BABY asfasf
 </body>
 </html>
