--- a/share.html
+++ b/share.html
@@ -8,19 +8,19 @@
     <!--<meta name="robots" content="noindex,follow" />-->
     <title>winwalk22333</title>
 
-    <!--<meta property="og:type" content="article" />-->
-    <!--<meta property="og:title" content="winwalk" />-->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="winwalk" />
     <!--<meta property="og:url" content="http://naver.com/"/>-->
-    <!--<meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />-->
+    <meta property="og:image" content="https://github.com/vocalhong/winwalk/blob/master/x/a_04_setting_lockscreen02.png?raw=true" />
 
-    <!--<meta name="twitter:card" content="summary"/>-->
-    <!--<meta name="twitter:title" content="winwalk"/>-->
-    <!--<meta name="twitter:url" content="http://winwalk.club/"/>-->
-    <!--<meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>-->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="winwalk"/>
+    <meta name="twitter:url" content="http://winwalk.club/"/>
+    <meta name="twitter:image" content="https://github.com/vocalhong/winwalk/blob/master/x/a_04_setting_lockscreen02.png?raw=true"/>
 
-    <!--<script type="text/javascript">-->
-        <!---->
-    <!--</script>-->
+    <script type="text/javascript">
+
+    </script>
 </head>
 <body>
  BABY xxx faesfsea
