--- a/share.html
+++ b/share.html
@@ -11,12 +11,12 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="winwalk" />
     <!--<meta property="og:url" content="http://naver.com/"/>-->
-    <meta property="og:image" content="https://github.com/vocalhong/winwalk/blob/master/x/a_04_setting_lockscreen02.png?raw=true" />
+    <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="winwalk"/>
     <meta name="twitter:url" content="http://winwalk.club/"/>
-    <meta name="twitter:image" content="https://github.com/vocalhong/winwalk/blob/master/x/a_04_setting_lockscreen02.png?raw=true"/>
+    <meta name="twitter:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg"/>
 
     <script type="text/javascript">
 
