--- a/share.html
+++ b/share.html
@@ -8,10 +8,10 @@
     <!--<meta name="robots" content="noindex,follow" />-->
     <title>winwalk22333</title>
 
-    <meta property="og:app_id" content="479065345473592" />
+    <meta property="fb:app_id" content="479065345473592" />
     <meta property="og:description" content="best app" />
 
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="winwalk" />
     <meta property="og:url" content="http://naver.com/"/>
     <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
