--- a/share.html
+++ b/share.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!--<meta name="robots" content="noindex,follow" />-->
+    <meta name="robots" content="noindex,follow" />
     <title>winwalk22333</title>
 
     <meta property="fb:app_id" content="479065345473592" />
@@ -26,6 +26,6 @@
     </script>
 </head>
 <body>
- BABY sungjun
+ BABY sungjun 2222
 </body>
 </html>
