--- a/share.html
+++ b/share.html
@@ -13,7 +13,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="winwalk" />
-    <meta property="og:url" content="https://vocalhong.github.io/share.html"/>
+    <meta property="og:url" content="https://vocalhong.github.io/share.html?referral_id=051232671"/>
     <meta property="og:image" content="https://d1jixw10z8snw8.cloudfront.net/s/01.jpg" />
 
     <meta name="twitter:card" content="summary"/>
