--- a/share.html
+++ b/share.html
@@ -6,10 +6,10 @@
     <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="noindex,follow" />
-    <title>winwalk22333</title>
+    <title>asef</title>
 
     <meta property="fb:app_id" content="479065345473592" />
-    <meta property="og:description" content="best app" />
+    <meta property="og:description" content="easy to use" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="winwalk" />
