--- a/test_for_splash.html
+++ b/test_for_splash.html
@@ -15,7 +15,11 @@
 
     <div data-role="main" class="ui-content">
         <p>디자이너 여러분! Splash앱을 통해 티켓구매를 하면 10%할인이 됩니다. 아래 버튼을 이용해서 결제를 진행해 주세요!!</p>
-        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234" data-role="button">Splash 앱으로 티켓 구매하기</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234&paymentAmount=5000" data-role="button">1일 참여 :5000원</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234&paymentAmount=10000" data-role="button">2일 참여 :10000원</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234&paymentAmount=15000" data-role="button">3일 참여 :15000원</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234&paymentAmount=20000" data-role="button">4일 참여 :20000원</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentId=abcd1234&paymentAmount=25000" data-role="button">5일 참여 :25000원</a>
     </div>
 
 
