--- a/splash/design_festival.html
+++ b/splash/design_festival.html
@@ -10,7 +10,7 @@
 
 <div data-role="page">
     <div data-role="header">
-        <h1>2018 서울 디자인페이 티켓구매</h1>
+        <h1>2018 서울 디자인 페스티벌 티켓구매</h1>
     </div>
 
     <div data-role="main" class="ui-content">
