--- a/splash/design_festival.html
+++ b/splash/design_festival.html
@@ -20,6 +20,7 @@
         <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=15000" data-role="button">3일 참여 :15000원</a>
         <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=20000" data-role="button">4일 참여 :20000원</a>
         <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=25000" data-role="button">5일 참여 :25000원</a>
+        <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=1000000" data-role="button">평생 참여 :1000000원</a>
     </div>
 
 
