--- a/splash/design_festival.html
+++ b/splash/design_festival.html
@@ -12,7 +12,7 @@
       <div class="ui-body ui-body-a ui-corner-all">
         <h3>2018 서울 디자인 페스티벌 티켓구매</h3>
           <p>디자이너 여러분! Splash앱을 통해 티켓구매를 하면 10%할인이 됩니다. 아래 버튼을 이용해서 결제를 진행해 주세요!!</p>
-    <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=5000&testP=1" data-role="button">1일 참여 :5,000원</a>
+    <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?testP=1&paymentAmount=5000" data-role="button">1일 참여 :5,000원</a>
     <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=10000" data-role="button">2일 참여 :1,0000원</a>
     <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=15000" data-role="button">3일 참여 :15,000원</a>
     <a href="https://splash.page.link/?apn=com.splash.app&link=https://www.bluewhale.foundation/?paymentAmount=20000" data-role="button">4일 참여 :20,000원</a>
