--- a/pixlee/ap_mall_main.html
+++ b/pixlee/ap_mall_main.html
@@ -16,7 +16,7 @@
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	  <title>Pixlee Test</title>
 	</head>
-  	<body>
+  	<body bgcolor="#00ff00">
 		<div id="pixlee_container"></div>
 		<script type="text/javascript">
 			window.PixleeAsyncInit = function() {
@@ -29,5 +29,6 @@
 			};
 		</script>
 		<script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+		<button type="button">Click Me!</button>
 	</body>
 </html>
