--- a/pixlee/soyoung.html
+++ b/pixlee/soyoung.html
@@ -16,7 +16,7 @@
 	  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	  <title>Pixlee Test</title>
 	</head>
-  	<body>
+  	<body bgcolor="#00ff00">
 		<div id="pixlee_container"></div>
 		<script type="text/javascript">
 			window.PixleeAsyncInit = function() {
