--- a/pixlee/ap_iope.html
+++ b/pixlee/ap_iope.html
@@ -28,7 +28,7 @@
 				});
 			};
 		</script>
-		<script src="https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
+		<script src="https://amorepacific-assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 		<button type="button">Click Me!</button>
 	</body>
 </html>
