--- a/pixlee/ap_iope.html
+++ b/pixlee/ap_iope.html
@@ -21,14 +21,15 @@
 		<script type="text/javascript">
 			window.PixleeAsyncInit = function() {
 				Pixlee.init({
-					apiKey:'oUmM0uIiFOyAAtg6JKYd'
+					apiKey:'CgLNEXLCR4PJHNwNLc2d'
 				});
 				Pixlee.addProductWidget({
-					accountId:1454, widgetId:2364914, skuId:"1298394"
+					accountId:1600, widgetId:3847758, skuId:"1298394"
 				});
 			};
+
 		</script>
-		<script src="https://amorepacific-assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
+		<script src="https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 		<button type="button">Click Me!</button>
 	</body>
 </html>
