--- a/pixlee/ap_mall_main.html
+++ b/pixlee/ap_mall_main.html
@@ -21,14 +21,14 @@
 		<script type="text/javascript">
 			window.PixleeAsyncInit = function() {
 				Pixlee.init({
-					apiKey:'oUmM0uIiFOyAAtg6JKYd'
+					apiKey:'CgLNEXLCR4PJHNwNLc2d'
 				});
-				Pixlee.addSimpleWidget({
-					widgetId:1349575
+				Pixlee.addProductWidget({
+					accountId:1600, widgetId:3847758, skuId:"932720"
 				});
 			};
 		</script>
-		<script src="https://assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+		<script src="https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 		<button type="button">Click Me!</button>
 	</body>
 </html>
