--- a/studymate_privacy_en.html
+++ b/studymate_privacy_en.html
@@ -3,7 +3,7 @@
 	<title>Privacy Policy</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes">
-	<link rel="stylesheet" type="text/css" href="common.css">
+	<link rel="stylesheet" type="text/css" href="qrcode/common.css">
 </head>
 <body>
 
