--- a/studymate/service_en.html
+++ b/studymate/service_en.html
@@ -10,7 +10,7 @@
 <div id="wrap">
 	<section class="util">
 		<section class="inner">
-			<h2>Privacy Policy</h2>
+			<h2>Terms and Services</h2>
 			<p class="ttl">Study Mate Global treasures each customer’s personal information. In addition, Study Mate Global has employed its own Privacy Policy for such information and transparently implemented such policy. In that regard, the Company has provided all relevant provisions, including but not limited to the following issues, as part of and in addition to this Privacy Policy: Types of data Study Mate Global collects, How to utilize such data, Whom to share such data with, Customers’ options associated with such data utilization, and so forth.</p>
 			<article>
 				<h3>Article 1 Purpose of Collecting Personal Information and its Uses</h3>
