--- a/studymate/service_en.html
+++ b/studymate/service_en.html
@@ -89,7 +89,7 @@
 			<article>
 				<h3>Article 9 (Notifications to Customers)</h3>
 				<ul>
-					<li>① Unless otherwise specified in these Terms of Service, the Company can use an email address or a phone number when making any notification to the Customer.</li>
+					<li>① Unless otherwise specified in these Terms of Service, the Company can use an email address when making any notification to the Customer.</li>
 					<li>② For any notification to all Customers, the Company is deemed to have performed its notification obligations set forth in ① by posting up such notification on its Website or "Notices" page for longer than 7 days. </li>
 					<li>③ When the Customer discovers the misuse of his or her ID, the Customer shall immediately notify the Company of such misuse and follow the Company’s instructions.</li>
 				</ul>
@@ -160,7 +160,6 @@
 				<h3>Article 15 (Copyright on Post)</h3>
 				<ul>
 					<li>① The copyright on the Post in connection with the Service shall be owned by its original content creator.</li>
-					<li>② If the Company intends to use any Post, the Company shall obtain the corresponding Customer’s prior consent via phone, fax, email or others. </li>
 				</ul>
 			</article>
 			<article>
@@ -192,7 +191,7 @@
 				<h3>Article 19 (Suspension)</h3>
 				<ul>
 					<li>① If the Customer breaches any of these Terms of Service or interferes with the Company’s normal operations, the Company may gradually impose restrictions (e.g. warning, temporary suspension, permanent suspension, etc.) on the use of the Service by the Customer.</li>
-					<li>② Despite the provisions set forth in ①, the Company can execute permanent suspension for any of the following cases: Misuse of another person’s name or credit in breach of the "Residential Registration Act", Misuse of another person’s phone number, Providing of illegal programs in breach of the "Copyright Act" and "Computer Program Protection Act", Interference with normal operations, Illegal communication and hacking in breach of the "Telecommunications Network Act", Distribution of malicious programs, Illegal login, and so forth. For such permanent suspension stated herein, all the benefits granted in connection with the Service will be eliminated, and the Company will not be held responsible for any compensation relating to such elimination.</li>
+					<li>② Despite the provisions set forth in ①, the Company can execute permanent suspension for any of the following cases: Misuse of another person’s name or credit in breach of the "Residential Registration Act", Providing of illegal programs in breach of the "Copyright Act" and "Computer Program Protection Act", Interference with normal operations, Illegal communication and hacking in breach of the "Telecommunications Network Act", Distribution of malicious programs, Illegal login, and so forth. For such permanent suspension stated herein, all the benefits granted in connection with the Service will be eliminated, and the Company will not be held responsible for any compensation relating to such elimination.</li>
 					<li>③ If the Customer has not logged in to the Service for longer than 3 months, the Company may impose certain restrictions on the use of the Service in order to protect his or her information and to secure operational efficiency.</li>
 					<li>④ Such suspension restrictions and other details in connection with this Article shall conform to the Company’s suspension policy.</li>
 					<li>⑤ For any service suspension or contractual termination pursuant to this Article, the Company shall notify such suspension or termination in accordance with the “Article 9 [Notifications to Customers]”.</li>
@@ -224,7 +223,7 @@
 			<article>
 				<h3>Article 21 (Overseas Service)</h3>
 				<p class="txt">
-					The Company has provided and managed the Service with its servers in South Korea. Accordingly, the Company will not guarantee the quality &amp; availability of the Service when the Customer uses the Service in foreign countries. Therefore, if the Customer intends to use the Service in any region out of South Korea, the Customer shall make his or her discretionary decision on the use of the Service. In particular, the Customer is responsible for complying with all local laws and regulations in connection with the Service.
+					The Company has provided and managed the Service with its servers in Japan. Accordingly, the Company will not guarantee the quality &amp; availability of the Service when the Customer uses the Service in foreign countries. Therefore, if the Customer intends to use the Service in any region out of Japan, the Customer shall make his or her discretionary decision on the use of the Service. In particular, the Customer is responsible for complying with all local laws and regulations in connection with the Service.
 				</p>
 			</article>
 			<article>
@@ -236,8 +235,8 @@
 			</article>
 			<article>
 				<h3>Supplementary Provisions</h3>
-				<p class="txt">Date posted: January 15, 2014;
-					Date enforced: January 31, 2014</p>
+				<p class="txt">Date posted: April 25, 2021;
+					Date enforced: April 25, 2021</p>
 				<ul>
 				</ul></article>
 		</section>
