add test information

--- a/scala_test/index.html
+++ b/scala_test/index.html
@@ -46,8 +46,8 @@
 
   <p>
     Tests performed via <a href="http://openjdk.java.net/projects/code-tools/jmh/">JMH</a>, 2 forks, 3 warmup
-    runs and 7 iteration (3 seconds each). Ubuntu 16.04, linux-kernel 4.4.0-51-generic, JDK 1.8.0_91, scala library 2.12.
-    The configuration of a hardware is Intel® Core™ i7–5600U CPU @ 2.60GHz × 4 (2 core + 2 HT) with 16 GB RAM.
+    runs and 7 iteration (3 seconds each). MacOS BigSur 11.3.1, JDK 1.8.0_282, scala library 2.11.
+    The configuration of a hardware is 2.6 GHz 6-Core Intel Core i7 with 16 GB 2400 MHz DDR4 RAM
   </p>
 
   <h2>Chart</h2>
