--- a/pixlee/fb_login.html
+++ b/pixlee/fb_login.html
@@ -54,7 +54,7 @@
 
 <!-- The JS SDK Login Button -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email,instagram_basic,instagram_read_engagement,pages_read_engagement" onlogin="checkLoginState();">
 </fb:login-button>
 
 <div id="status">
