--- a/pixlee/jun.html
+++ b/pixlee/jun.html
@@ -21,10 +21,10 @@
 		<script type="text/javascript">
 			window.PixleeAsyncInit = function() {
 				Pixlee.init({
-					apiKey:'oUmM0uIiFOyAAtg6JKYd'
+					apiKey:'CgLNEXLCR4PJHNwNLc2d'
 				});
 				Pixlee.addSimpleWidget({
-					widgetId:1349579
+					widgetId:7363177
 				});
 			};
 		</script>
