test a wrong url scheme

--- a/pixlee/jun.html
+++ b/pixlee/jun.html
@@ -16,6 +16,6 @@
 				});
 			};
 		</script>
-		<script src="https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
+		<script src="//assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 	</body>
 </html>
