--- a/pixlee/super.html
+++ b/pixlee/super.html
@@ -7,7 +7,7 @@
 <script>
   window.Pixlee.init({ apiKey: 'yDMO7jXPGyXMiSEzkaxr' })
   window.Pixlee.addSimpleWidget({
-    containerId: container_8494854,
+    containerId: "container_8494854",
     widgetId: 8494854,
     subscribedEvents: ['widgetLoaded']
   })
