--- a/pixlee/bershka.html
+++ b/pixlee/bershka.html
@@ -15,7 +15,7 @@
     };
     </script> -->
     
-
+<div id="pixlee_container"></div>
     <script type="text/javascript"> window.PixleeAsyncInit = function() {
       Pixlee.init({apiKey:'TZKvqi1IyXs6EdnGPrgp'}); 
       Pixlee.addCategoryWidget({accountId:2609, widgetId:17067534, categoryName:"setting"});};
