--- a/pixlee/jun.html
+++ b/pixlee/jun.html
@@ -12,10 +12,11 @@
     window.PixleeAsyncInit = function() {
         Pixlee.init({apiKey:'qD9q60DA4uU8kAiMeMU2'});
         Pixlee.addCategoryWidget({accountId:1600, widgetId:3847749, insensitiveCategoryName:"camping"});
-        // Pixlee.addSimpleWidget({widgetId:3847749, categoryName:"camping"});
+        // Pixlee.addSimpleWidget({widgetId:3847749, categoryName:"CAmping2"});
     };
     </script>
-    <script src="https://beta.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
+    <script src="https://assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
+<!--     <script src="https://beta.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script> -->
     </div>
   </body>
 </html>
